force-app/main/default/objects/Customer_Complaint__c/Customer_Complaint__c.object-meta.xml
<CustomObject>
    <label>Customer Complaint/Customer Care</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Complain No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Complaint/Customer Care</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>