force-app/main/default/objects/Customer_Complaint__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>