force-app/main/default/objects/Customer_Complaint__c/fields/Card_No__c.field-meta.xml
<CustomField>
    <fullName>Card_No__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Card No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>