force-app/main/default/objects/Customer_Complaint__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>