force-app/main/default/objects/Customer_Complaint__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commit Date</label>
    <type>DateTime</type>
</CustomField>