force-app/main/default/objects/Customer_Complaint__c/fields/Customer_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Customer_E_Mail__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer E-Mail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>