force-app/main/default/objects/Customer_Complaint__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Name</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>