force-app/main/default/objects/Customer_Complaint__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>