force-app/main/default/objects/Customer_Complaint__c/fields/Deposit_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_No__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Deposit Account No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>