force-app/main/default/objects/Customer_Complaint__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>