force-app/main/default/objects/Customer_Complaint__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Issue Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>