force-app/main/default/objects/Customer_Complaint__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>