force-app/main/default/objects/Customer_Complaint__c/fields/Register_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Register_Contact_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Register Contact No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>