force-app/main/default/objects/Customer_Complaint__c/fields/Register_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Register_E_Mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Register E-Mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>