force-app/main/default/objects/Customer_Complaint__c/fields/Registered_By__c.field-meta.xml
<CustomField>
    <fullName>Registered_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered By</label>
    <length>124</length>
    <type>Text</type>
</CustomField>