force-app/main/default/objects/Customer_Complaint__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Severity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>