force-app/main/default/objects/Customer_Complaint__c/fields/Sr_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sr_Status_Changed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sr Status Changed Date</label>
    <type>DateTime</type>
</CustomField>