force-app/main/default/objects/Customer_Complaint__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>