force-app/main/default/objects/Customer_Complaint__c/fields/TMB_Care__c.field-meta.xml
<CustomField>
    <fullName>TMB_Care__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Care</label>
    <length>50</length>
    <type>Text</type>
</CustomField>